--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ckeditor/ckeditor5-highlight": "^35.0.1",
     "@ckeditor/ckeditor5-horizontal-line": "^35.0.1",
     "@ckeditor/ckeditor5-html-embed": "^35.0.1",
+    "@ckeditor/ckeditor5-html-support": "^35.0.1",
     "@ckeditor/ckeditor5-image": "^35.0.1",
     "@ckeditor/ckeditor5-indent": "^35.0.1",
     "@ckeditor/ckeditor5-link": "^35.0.1",
@@ -38,7 +39,6 @@
     "@ckeditor/ckeditor5-table": "^35.0.1",
     "@ckeditor/ckeditor5-theme-lark": "^35.0.1",
     "@ckeditor/ckeditor5-typing": "^35.0.1",
-    "@ckeditor/ckeditor5-html-support": "^35.0.1",
     "css-loader": "^5.2.6",
     "postcss": "^8.3.0",
     "postcss-loader": "^4.3.0",
@@ -51,5 +51,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "watch": "npm run build --watch"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-widget": "^35.0.1"
   }
 }
